...
        var message: String = ""
        switch error {
        case FetchError.apiKeyError:
            message = "알 수 없는 오류가 발생하였습니다."
            return message
        case FetchError.cityNameError:
            message = "도시 이름을 다시 확인해주세요."
            return message
        case FetchError.internetConnectionProblem:
            message = "인터넷 연결을 확인해주세요."
            return message
        case FetchError.undefined:
            message = "알 수 없는 오류가 발생하였습니다."
...
