...
    
    lazy var bookMarkButton: UIButton = {
        let button: UIButton = UIButton(type: UIButton.ButtonType.custom)
        button.translatesAutoresizingMaskIntoConstraints = false
        
        button.tintColor = UIColor.lightGray
        button.setImage(UIImage(named: "star")?.withRenderingMode(.alwaysTemplate), for: UIControl.State.normal)
        button.addTarget(self, action: #selector(touchUpBookMarkButton(_:)), for: UIControl.Event.touchUpInside)
        
        return button
    }()
    
    var cityNameLabel: UILabel = {
...
